bootstrap_instalado_y_media_incluido

--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Corporate single web app built with Bootstrap 4</title>
+    <!-- instalar Bootstrap -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </head>
 <body>
+
+    <header class="container-fluid">header: logo empresa y lema</header>
+
+    <nav class="container-fluid">nav sticky con links a sections</nav>
+
+    <section class="container-fluid">vídeo de bg sin controls</section>
+    <!-- video source: https://www.pexels.com/video/digital-projection-of-the-earth-mass-in-blue-lights-3129957/ -->
+
+    <section class="container-fluid">qué hacemos, transformar, eliminación papel, procesos, img y texto</section>
+    <!-- img source: https://www.pexels.com/photo/aerial-air-air-force-aircraft-392024/ -->
+
+    <section class="container-fluid">resultados beneficios, texto e img</section>
+    <!-- img source: https://www.pexels.com/photo/blue-white-and-green-building-illustration-4549831/ -->
+
+    <section class="container-fluid">clientes, iconos que se mueven</section>
+
+    <section class="container-fluid">contacto, formulario izq + info der</section>
+
+    <footer class="container-fluid">footer, columnas con links</footer>
     
 </body>
 </html>
