--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
 
         <div class="container">
 
-            <h2>Clientes</h2>
+            <h2>Clients</h2>
 
             <div class="logos">
                 <i class="fas fa-gem"></i>
