layout improved for bigger screens than 1280px

--- a/index.html
+++ b/index.html
@@ -131,12 +131,11 @@
             <div>
                 <h3>Paying attention to detail is essential</h3>
                 <div class="flex">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt iste hic dolorem eum eveniet
-                    dolor quis ea id, aut enim cum, fuga asperiores facilis deleniti
-                    quas.
-                    </p>
                     <!-- img source: https://www.pexels.com/photo/aerial-air-air-force-aircraft-392024/ -->
-                    <img src="img/pexels-david-mcbee-392024.jpg" alt="">
+                    <img src="img/pexels-david-mcbee-392024.jpg" alt="" class="derecha">
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt iste hic dolorem eum eveniet
+                        dolor quis ea id, aut enim cum, fuga asperiores facilis deleniti
+                        quas.</p>
                 </div>
                 
             </div>
