--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <!-- metadata -->
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Corporate</title>
     <meta name="author" content="Eduardo de la Cruz Palacios" />
